--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,18 +22,20 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     compileSdkVersion 30
-
+    
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.unsa.epis.pe.lab_pe"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -47,4 +49,9 @@ android {
 
 flutter {
     source '../..'
+}
+dependencies {
+  implementation platform('com.google.firebase:firebase-bom:29.0.0')
+  implementation 'com.google.firebase:firebase-analytics-ktx'
+  implementation "androidx.multidex:multidex:2.0.1"
 }
